--- a/sections/product-subscription-template.liquid
+++ b/sections/product-subscription-template.liquid
@@ -139,6 +139,11 @@
           </button>
           {% endif %}
         </div>
+        <style>
+            .getsocial {
+              padding-top: 15px;
+            }
+        </style>
         {% include 'getsocial-inline-bar' %}
 
       </div>
