--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -166,7 +166,6 @@
       .banner-decorate-walls_howitworks {
           padding-left: 20px;
           padding-top: 10px;
-          display: none;
         }
       .advantage {
         margin-top: 40px;
@@ -381,7 +380,7 @@
       font-weight: 600;
     }
     .getsocial {
-      display: none;
+      padding-top: 15px;
     }
     .getsocial.gs-inline-group.gs-big-counter {
         margin-bottom: 5px !important;
