--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -882,8 +882,11 @@
         $('.upsell-anoncment-popup').click( function () {
             $('.announcement-slider').slick({infinite:!1,arrows:!0,dots:!1,slidesToShow:1,slidesToScroll:1,variableWidth:!1,swipeToSlide:!0,rows:0,autoplay:true,autoplaySpeed:2000,responsive:[{breakpoint:1199,settings:{slidesToShow:1,variableWidth:!1}}]}).slick("slickGoTo",0);
         });
-
-        $.get("https://ipinfo.io/json?token=bfdc4f6f5babff", function (response) { if (response.country != "US"){ $('.go-cart-drawer-progress-bar').hide();$('.custom-tax-new').hide();} });
+{%comment%}
+    token=bfdc4f6f5babff
+    token=ea639b54a40421
+{%endcomment%}
+        $.get("https://ipinfo.io/json?token=ea639b54a40421", function (response) { if (response.country != "US"){ $('.go-cart-drawer-progress-bar').hide();$('.custom-tax-new').hide();} });
 
         $('.upsell-button').on('click',function(e){    
         e.preventDefault();
