Innitial uncommited changes

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -424,6 +424,10 @@ twq('track','PageView');
   }
 </script>
 <!-- END chat2desk -->
+  
+  <!-- DV 23/08/21 viralsweep -->
+  <div id="vsscript_89885_349912"></div><script async type="text/javascript" src="https://app.viralsweep.com/vsa-lightbox-16ea94-89885.js?sid=89885_349912"></script>
+  <!-- END viralsweep -->
 
   <script async type='text/javascript' src='//asset.fwcdn1.com/js/storyblock.js'></script>  
    <!--DV 10/03/21-->
