--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -106,33 +106,46 @@
         <div class="filters-toolbar">
           {% if section.settings.tags_enable %}
           <div class="filters-toolbar__item">
-            <label for="SortTags" class="label--hidden">{{ 'collections.filters.title_tags' | t }}</label>
-            <select class="filters-toolbar__input filters-toolbar__input--filter hidden" name="SortTags" id="SortTags">
+            <style>
+              ul.filter-tags li {
+                display: inline;
+              }
+              .filter-tags a {
+                font-weight: 500;
+                padding: 10px;
+              }
+              .filter-tags a:hover {
+                color: #ff7607;
+              }
+              ul.filter-tags {
+                text-align: center;
+                margin: 20px 0;
+                line-height: 35px;
+              }
+              .filter-tags .selected {
+                color: #ff7607;
+                border: 2px solid #ff7607;
+              }
+            </style>
+            <ul class="filter-tags">
               {% if current_tags %}
-              {% if collection.handle %}
-              <option value="/collections/{{ collection.handle }}">{{ 'collections.filters.all_tags' | t }}</option>
-              {% elsif collection.current_type %}
-              <option value="{{ collection.current_type | url_for_type }}">{{ 'collections.filters.all_tags' | t }}</option>
-              {% elsif collection.current_vendor %}
-              <option value="{{ collection.current_vendor | url_for_vendor }}">{{ 'collections.filters.all_tags' | t }}</option>
-              {% endif %}
+                {% if collection.handle %}
+                  <li><a href="/collections/{{ collection.handle }}">{{ 'collections.filters.all_tags' | t }}</a></li>
+                {% elsif collection.current_type %}
+                  <li><a href="{{ collection.current_type | url_for_type }}">{{ 'collections.filters.all_tags' | t }}</a></li>
+                {% elsif collection.current_vendor %}
+                  <li><a href="{{ collection.current_vendor | url_for_vendor }}">{{ 'collections.filters.all_tags' | t }}</a></li>
+                {% endif %}
               {% else %}
-              {% if current_tags contains tag %}
-              <option value="">{{ 'collections.filters.all_tags' | t }}</option>
-              {% else %}
-              <option value="">{{ 'collections.filters.title_tags' | t }}</option>
+                  <li><a href="#" class="selected">{{ 'collections.filters.all_tags' | t }}</a></li>
               {% endif %}
-              {% endif %}
-              {% for tag in collection.all_tags %}
-              <option value="/collections/{% if collection.handle != blank %}{{ collection.handle }}{% else %}all{% endif %}/{{ tag | handleize }}"{% if current_tags contains tag %} selected="selected"{% endif %}>{{ tag }}</option>
+              {%- assign filter_tags = "Perfect gift,Most popular,Big,Perfect for her,For kids,Perfect for him,Composite,New" | split: "," -%}
+              {% for tag in filter_tags %}
+                <li><a href="/collections/{% if collection.handle != blank %}{{ collection.handle }}{% else %}all{% endif %}/{{ tag | handleize }}"{% if current_tags contains tag %} class="selected"{% endif %}>{{ tag }}</a></li>
               {% endfor %}
-            </select>
+            </ul>
           </div>
           {% endif %}
-
-          <div class="filters-toolbar__item filters-toolbar__item--count">
-            <span class="filters-toolbar__product-count">{{ 'collections.general.items_with_count' | t: count: collection.products_count }}</span>
-          </div>
 
           {% if section.settings.sort_enable %}
           <div class="filters-toolbar__item text-right">
@@ -205,7 +218,6 @@
     {% endif %}
     <h2 class="" style="text-align: center; margin: 30px 0;">CHOOSE YOUR PUZZLE</h2>
     <div class="grid grid--uniform{% if collection.products_count > 0 %} grid--view-items{% endif %}">
-      
       {% for product in collection.products %}
       <div class="grid__item grid__item--{{section.id}} {{ grid_item_width }} {{grid_mobile}}">
         {% include 'product-card-grid', max_height: max_height %}
@@ -318,6 +330,7 @@
     {% endunless %}
 
     <!-- ====================== Sub Collection Code =========================== -->
+    
 
     {% for block in section.blocks %}
     {% if block.settings.choose_collection == collection.handle %}
@@ -357,33 +370,24 @@
         <div class="filters-toolbar">
           {% if section.settings.tags_enable %}
           <div class="filters-toolbar__item">
-            <label for="SortTags" class="label--hidden">{{ 'collections.filters.title_tags' | t }}</label>
-            <select class="filters-toolbar__input filters-toolbar__input--filter hidden" name="SortTags" id="SortTags">
+            <ul>
               {% if current_tags %}
-              {% if collection.handle %}
-              <option value="/collections/{{ collection.handle }}">{{ 'collections.filters.all_tags' | t }}</option>
-              {% elsif collection.current_type %}
-              <option value="{{ collection.current_type | url_for_type }}">{{ 'collections.filters.all_tags' | t }}</option>
-              {% elsif collection.current_vendor %}
-              <option value="{{ collection.current_vendor | url_for_vendor }}">{{ 'collections.filters.all_tags' | t }}</option>
-              {% endif %}
+                {% if collection.handle %}
+                  <li><a href="/collections/{{ collection.handle }}">{{ 'collections.filters.all_tags' | t }}</a></li>
+                {% elsif collection.current_type %}
+                  <li><a href="{{ collection.current_type | url_for_type }}">{{ 'collections.filters.all_tags' | t }}</a></li>
+                {% elsif collection.current_vendor %}
+                  <li><a href="{{ collection.current_vendor | url_for_vendor }}">{{ 'collections.filters.all_tags' | t }}</a></li>
+                {% endif %}
               {% else %}
-              {% if current_tags contains tag %}
-              <option value="">{{ 'collections.filters.all_tags' | t }}</option>
-              {% else %}
-              <option value="">{{ 'collections.filters.title_tags' | t }}</option>
-              {% endif %}
+                  <li><a href="#">{{ 'collections.filters.all_tags' | t }}</a></li>
               {% endif %}
               {% for tag in collection.all_tags %}
-              <option value="/collections/{% if collection.handle != blank %}{{ collection.handle }}{% else %}all{% endif %}/{{ tag | handleize }}"{% if current_tags contains tag %} selected="selected"{% endif %}>{{ tag }}</option>
+                <li><a href="/collections/{% if collection.handle != blank %}{{ collection.handle }}{% else %}all{% endif %}/{{ tag | handleize }}"{% if current_tags contains tag %} selected="selected"{% endif %}>{{ tag }}</a></li>
               {% endfor %}
-            </select>
+            </ul>
           </div>
           {% endif %}
-
-          <div class="filters-toolbar__item filters-toolbar__item--count">
-            <span class="filters-toolbar__product-count">{{ 'collections.general.items_with_count' | t: count: collection.products_count }}</span>
-          </div>
 
           {% if section.settings.sort_enable %}
           <div class="filters-toolbar__item text-right">
